--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^3.0.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/platform-express": "^9.0.0",
@@ -33,6 +34,7 @@
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
+    "@nestjs-modules/mailer": "^1.9.1",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
@@ -41,13 +43,16 @@
     "@types/jest": "29.5.0",
     "@types/multer": "^1.4.7",
     "@types/node": "18.15.11",
+    "@types/nodemailer": "^6.4.9",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "handlebars": "^4.7.8",
     "jest": "29.5.0",
+    "nodemailer": "^6.9.4",
     "prettier": "^2.3.2",
     "prisma": "^5.1.1",
     "source-map-support": "^0.5.20",
